--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,13 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.8.1", features = ["macros"] }
 axum-extra = "0.10.0"
+sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "uuid"] }
+# Unsure if one of `chrono` or `time` is more preferred for `query!` in sqlx,
+# see docs. I slightly prefer `chrono` because it uses strftime, which is at
+# least consistent with databases. I hope I don't need to deal with timezones
+# (which chrono may be better for).
+#
+# If I wanted to do my crazy mmap-based backend, I'd love this to be very small
+# and controllable, and I *think* `chrono` is more compact than `time` too.
 tokio = { version = "1.42.0", features = ["full"] }
 uuid = { version = "1.11.0", features = ["serde"] }
