--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,7 @@ sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "uuid"] }
 # If I wanted to do my crazy mmap-based backend, I'd love this to be very small
 # and controllable, and I *think* `chrono` is more compact than `time` too.
 tokio = { version = "1.42.0", features = ["full"] }
+tower-http = { version = "0.6.2", features = ["trace"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 uuid = { version = "1.11.0", features = ["serde"] }
