--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.8.1", features = ["macros"] }
 axum-extra = "0.10.0"
+chrono = { version = "0.4.39", features = ["serde"] }
 serde = "1.0.217"
-sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "uuid"] }
+sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
 # Unsure if one of `chrono` or `time` is more preferred for `query!` in sqlx,
 # see docs. I slightly prefer `chrono` because it uses strftime, which is at
 # least consistent with databases. I hope I don't need to deal with timezones
